--- a/humidity.html
+++ b/humidity.html
@@ -43,17 +43,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 text-box">
-                <h1>Summary: Latitude vs. X</h1>
+                <h1>Humidity</h1>
                 <hr>
                 <div class="img-responsive float-left mr-2" id="fig-image">
-                    <a href="max_temp.html"><img src="assets/images/Fig1.png" width=300px alt="Fig 1"></a>
+                    <a href="max_temp.html"><img src="assets/images/Fig2.png" width=300px alt="Fig 2"></a>
                 </div>
                 <div class="summary-text">
                     <p>
-                        The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
-                        <br><br>
-                        After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.
-                    </p>
+                        Humidity does not appear to have a direct relationship with latitude, as there is a wide degree of variation in humidity among cities located along the same latitudes                    </p>
                 </div>
             </div>
             <div class="col-md-auto">
@@ -74,7 +71,7 @@
             </div>
         </div>
     </div>
-    
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
